{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 26,
  "lineage": "778d156d-add6-ff1c-b1cd-4b41300d1495",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089d8264a826ee0cb",
            "arn": "arn:aws:ec2:eu-west-2:233896339906:elastic-ip/eipalloc-089d8264a826ee0cb",
            "association_id": "eipassoc-079f79c3c1eac06f8",
            "domain": "vpc",
            "id": "eipalloc-089d8264a826ee0cb",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-05da277e6857d3376",
            "private_dns": "ip-10-0-1-241.eu-west-2.compute.internal",
            "private_ip": "10.0.1.241",
            "public_dns": "ec2-18-175-27-231.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.175.27.231",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233896339906:internet-gateway/igw-0d4fa9342d8cd069d",
            "id": "igw-0d4fa9342d8cd069d",
            "owner_id": "233896339906",
            "tags": {
              "Name": "saas-microservices-private-2",
              "kubernetes.io/cluster/saas-microservices": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "saas-microservices-private-2",
              "kubernetes.io/cluster/saas-microservices": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a3d6d40faa021fe0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089d8264a826ee0cb",
            "association_id": "eipassoc-079f79c3c1eac06f8",
            "connectivity_type": "public",
            "id": "nat-00b154987d3dca2f6",
            "network_interface_id": "eni-05da277e6857d3376",
            "private_ip": "10.0.1.241",
            "public_ip": "18.175.27.231",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03d17a944e98b6a1e",
            "tags": {
              "Name": "saas-microservices-public-2",
              "kubernetes.io/cluster/saas-microservices": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "saas-microservices-public-2",
              "kubernetes.io/cluster/saas-microservices": "shared",
              "kubernetes.io/role/elb": "1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233896339906:route-table/rtb-09800dab43b647aad",
            "id": "rtb-09800dab43b647aad",
            "owner_id": "233896339906",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00b154987d3dca2f6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "saas-microservices-private-rt"
            },
            "tags_all": {
              "Name": "saas-microservices-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d6d40faa021fe0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233896339906:route-table/rtb-0fe294cd65c822ed8",
            "id": "rtb-0fe294cd65c822ed8",
            "owner_id": "233896339906",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d4fa9342d8cd069d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "saas-microservices-public-rt"
            },
            "tags_all": {
              "Name": "saas-microservices-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d6d40faa021fe0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a3687db0d4a3b0d",
            "route_table_id": "rtb-09800dab43b647aad",
            "subnet_id": "subnet-039abd06082e408cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0602b353212132fae",
            "route_table_id": "rtb-09800dab43b647aad",
            "subnet_id": "subnet-0a1067cb8e5e8b0e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad8701493d2fd9b8",
            "route_table_id": "rtb-0fe294cd65c822ed8",
            "subnet_id": "subnet-03d17a944e98b6a1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b06282f10e10f802",
            "route_table_id": "rtb-0fe294cd65c822ed8",
            "subnet_id": "subnet-098c44b631ed069ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233896339906:subnet/subnet-039abd06082e408cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039abd06082e408cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233896339906",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "saas-microservices-private-1",
              "kubernetes.io/cluster/saas-microservices": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "saas-microservices-private-1",
              "kubernetes.io/cluster/saas-microservices": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a3d6d40faa021fe0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233896339906:subnet/subnet-0a1067cb8e5e8b0e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1067cb8e5e8b0e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233896339906",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "saas-microservices-private-2"
            },
            "tags_all": {
              "Name": "saas-microservices-private-2"
            },
            "vpc_id": "vpc-0a3d6d40faa021fe0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233896339906:subnet/subnet-03d17a944e98b6a1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d17a944e98b6a1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233896339906",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "saas-microservices-public-1"
            },
            "tags_all": {
              "Name": "saas-microservices-public-1"
            },
            "vpc_id": "vpc-0a3d6d40faa021fe0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233896339906:subnet/subnet-098c44b631ed069ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098c44b631ed069ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233896339906",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "saas-microservices-public-2"
            },
            "tags_all": {
              "Name": "saas-microservices-public-2"
            },
            "vpc_id": "vpc-0a3d6d40faa021fe0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233896339906:vpc/vpc-0a3d6d40faa021fe0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c907263c156448d",
            "default_route_table_id": "rtb-025705553a78ccc61",
            "default_security_group_id": "sg-0a68ab355ce6555f2",
            "dhcp_options_id": "dopt-0610f1858c6962384",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a3d6d40faa021fe0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-025705553a78ccc61",
            "owner_id": "233896339906",
            "tags": {
              "Name": "saas-microservices-vpc"
            },
            "tags_all": {
              "Name": "saas-microservices-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}